add API methods for waiting list entries
